sonarqube/sonar-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonar
  namespace: sonar
  labels:
    app: sonar
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sonar
  template:
    metadata:
      labels:
        app: sonar
    spec:
      containers:
      - name: sonarqube
        image: sonarqube:8.9.1-community
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: app-pvc
          mountPath: "/opt/sonarqube/data/"
          subPath: data
        - name: app-pvc
          mountPath: "/opt/sonarqube/extensions/"
          subPath: extensions
        resources:
          requests:
            memory: "1024Mi"
          limits:
            memory: "2048Mi"
      volumes:
      - name: app-pvc
        persistentVolumeClaim:
          claimName: sonar-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: sonarqube-sv
  namespace: sonar
  labels:
    app: sonarqube-sv
spec:
  type: NodePort
  ports:
  - port: 9000
    name: sonar
  selector:
    app: sonar

# apiVersion: v1
# kind: Service
# metadata:
#   name: jenkins-master
#   namespace: jenkins
# spec:
#   type: NodePort
#   ports:
#   - port: 80
#     targetPort: 8080
#     name: jenkins-http
